
Joda-Money
================================================
Joda-Money is a monetary library that fills the gap in the JDK
by providing a Money class and associated formatting.

The release runs on JDK 6 or later.

See http://www.joda.org/joda-money/changes-report.html for changes

Joda-Money is licensed under the business-friendly Apache License Version 2.
This is the same license as all of Apache, plus other open source projects such as Spring.


Feedback
--------
Feedback is best received using GitHub issues and Pull Requests.
https://github.com/JodaOrg/joda-money/

The Joda team


### Release process

* Update version (pom.xml, README.md, index.md, changes.xml)
* Commit and push
* `mvn clean deploy -Doss.repo -Dgpg.passphrase=""`
* Release project in [Nexus](https://oss.sonatype.org)
* Website will be built and released by Travis